translations: product documents page translations completed

--- a/app/i18n/locales/en.json
+++ b/app/i18n/locales/en.json
@@ -284,6 +284,53 @@
         "carbonFootprint": "Carbon Footprint"
       }
     },
+    "ProductDocuments": {
+      "uploadNewDocument": "Upload New Document",
+      "documentType": "Document Type",
+      "select": "Select",
+      "qualityCertificate": "Quality Certificate",
+      "safetyCertificate": "Safety Certificate",
+      "testReports": "Test Reports",
+      "technicalDocumentation": "Technical Documentation",
+      "complianceDocuments": "Compliance Documents",
+      "file": "File",
+      "selectedFile": "Selected file:",
+      "additionalInfo": "Additional Info",
+      "version": "Version",
+      "validUntilOptional": "Valid Until (Optional)",
+      "notesOptional": "Notes (Optional)",
+      "documentNotesPlaceholder": "Document notes...",
+      "cancel": "Cancel",
+      "uploading": "Uploading...",
+      "uploadDocument": "Upload Document",
+      "noDocuments": "No Documents Found",
+      "noDocumentsDescription": "This product has no documents attached.",
+      "documentName": "Document Name",
+      "type": "Type",
+      "status": "Status",
+      "validUntil": "Valid Until",
+      "actions": "Actions",
+      "openMenu": "Open menu",
+      "download": "Download",
+      "view": "View",
+      "viewHistory": "View History",
+      "reject": "Reject",
+      "reupload": "Reupload",
+      "documentDetails": "Document Details",
+      "generalInfo": "General Info",
+      "fileSize": "File Size",
+      "uploadDate": "Upload Date",
+      "notes": "Notes",
+      "rejectionReason": "Rejection Reason",
+      "rejectDocument": "Reject Document",
+      "rejectDescription": "Please enter a reason for rejecting the document.",
+      "rejectionReasonPlaceholder": "Rejection reason...",
+      "confirm": "Confirm",
+      "productDocuments": "Product Documents",
+      "productNotFound": "Product Not Found",
+      "productNotFoundDescription": "The requested product could not be found.",
+      "notAvailable": "Not Available"
+    },
     "featured": {
       "title": "Featured Products",
       "description": "Browse our curated selection of certified sustainable products",
