--- a/app/i18n/locales/tr.json
+++ b/app/i18n/locales/tr.json
@@ -285,6 +285,53 @@
         "carbonFootprint": "Karbon Ayak İzi"
       }
     },
+    "ProductDocuments": {
+      "uploadNewDocument": "Yeni Belge Yükle",
+      "documentType": "Belge Tipi",
+      "select": "Seçiniz",
+      "qualityCertificate": "Kalite Sertifikası",
+      "safetyCertificate": "Güvenlik Sertifikası",
+      "testReports": "Test Raporları",
+      "technicalDocumentation": "Teknik Dokümantasyon",
+      "complianceDocuments": "Uyumluluk Belgeleri",
+      "file": "Dosya",
+      "selectedFile": "Seçilen dosya:",
+      "additionalInfo": "Ek Bilgiler",
+      "version": "Versiyon",
+      "validUntilOptional": "Geçerlilik Tarihi (Opsiyonel)",
+      "notesOptional": "Notlar (Opsiyonel)",
+      "documentNotesPlaceholder": "Belge hakkında notlar...",
+      "cancel": "İptal",
+      "uploading": "Yükleniyor...",
+      "uploadDocument": "Belge Yükle",
+      "noDocuments": "Belge Bulunamadı",
+      "noDocumentsDescription": "Bu ürüne ait belge bulunmamaktadır.",
+      "documentName": "Belge Adı",
+      "type": "Tip",
+      "status": "Durum",
+      "validUntil": "Geçerlilik Tarihi",
+      "actions": "İşlemler",
+      "openMenu": "Menüyü aç",
+      "download": "İndir",
+      "view": "Görüntüle",
+      "viewHistory": "Geçmişi Görüntüle",
+      "reject": "Reddet",
+      "reupload": "Yeniden Yükle",
+      "documentDetails": "Belge Detayları",
+      "generalInfo": "Genel Bilgiler",
+      "fileSize": "Dosya Boyutu",
+      "uploadDate": "Yüklenme Tarihi",
+      "notes": "Notlar",
+      "rejectionReason": "Red Nedeni",
+      "rejectDocument": "Belge Reddet",
+      "rejectDescription": "Belgenin reddedilmesi için neden girin.",
+      "rejectionReasonPlaceholder": "Reddetme nedeni...",
+      "confirm": "Onayla",
+      "productDocuments": "Ürün Belgeleri",
+      "productNotFound": "Ürün Bulunamadı",
+      "productNotFoundDescription": "İstenilen ürün bulunamadı.",
+      "notAvailable": "Belirtilmemiş"
+    },
     "featured": {
       "title": "Öne Çıkan Ürünler",
       "description": "Seçilmiş sertifikalı sürdürülebilir ürünlerimize göz atın"
