fix: product documents page translations and error handling improvements

--- a/app/i18n/locales/en.json
+++ b/app/i18n/locales/en.json
@@ -297,13 +297,13 @@
       "selectedFile": "Selected file:",
       "additionalInfo": "Additional Info",
       "version": "Version",
-      "validUntilOptional": "Valid Until (Optional)",
-      "notesOptional": "Notes (Optional)",
+      "validUntilOptional": "Optional",
+      "notesOptional": "Optional",
       "documentNotesPlaceholder": "Document notes...",
       "cancel": "Cancel",
       "uploading": "Uploading...",
       "uploadDocument": "Upload Document",
-      "noDocuments": "No Documents Found",
+      "noDocumentsFound": "No Documents Found",
       "noDocumentsDescription": "This product has no documents attached.",
       "documentName": "Document Name",
       "type": "Type",
