--- a/app/i18n/locales/tr.json
+++ b/app/i18n/locales/tr.json
@@ -298,13 +298,13 @@
       "selectedFile": "Seçilen dosya:",
       "additionalInfo": "Ek Bilgiler",
       "version": "Versiyon",
-      "validUntilOptional": "Geçerlilik Tarihi (Opsiyonel)",
-      "notesOptional": "Notlar (Opsiyonel)",
+      "validUntilOptional": "Opsiyonel",
+      "notesOptional": "Opsiyonel",
       "documentNotesPlaceholder": "Belge hakkında notlar...",
       "cancel": "İptal",
       "uploading": "Yükleniyor...",
       "uploadDocument": "Belge Yükle",
-      "noDocuments": "Belge Bulunamadı",
+      "noDocumentsFound": "Belge Bulunamadı",
       "noDocumentsDescription": "Bu ürüne ait belge bulunmamaktadır.",
       "documentName": "Belge Adı",
       "type": "Tip",
