Update feature section i18n keys and fix translation paths

--- a/app/i18n/locales/en.json
+++ b/app/i18n/locales/en.json
@@ -333,7 +333,7 @@
       "success": "Success",
       "documentUploadedSuccessfully": "Document uploaded successfully"
     },
-    "featured": {
+    "features": {
       "title": "Featured Products",
       "description": "Browse our curated selection of certified sustainable products",
       "sections": {
